# PAOO_projects

./: .gitignore  README.md
Tema1/src/: CMakeLists.txt  main.cpp
Tema1/src/money_transfer_service/: CMakeLists.txt  money_transfer_service.cpp  money_transfer_service.hpp
